// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > build base 1`] = `
{
  "css": ":root {
  --primary: 22 119 255;
  --primary-hover: 64 150 255;
  --primary-active: 9 88 217;
  --primary-content: 255 255 255;
  --success: 82 196 26;
  --success-hover: 115 209 61;
  --success-active: 56 158 13;
  --success-content: 255 255 255;
  --warning: 250 173 20;
  --warning-hover: 255 197 61;
  --warning-active: 212 136 6;
  --warning-content: 255 255 255;
  --error: 245 34 45;
  --error-hover: 255 77 79;
  --error-active: 207 19 34;
  --error-content: 255 255 255;
  --neutral: 102 102 102;
  --neutral-hover: 115 115 115;
  --neutral-active: 64 64 64;
  --neutral-content: 255 255 255;
  --base-100: 255 255 255;
  --base-200: 250 250 250;
  --base-300: 245 245 245;
  --base-400: 240 240 240;
  --base-500: 217 217 217;
  --base-600: 191 191 191;
  --base-700: 140 140 140;
  --base-800: 89 89 89;
  --base-900: 67 67 67;
  --base-1000: 38 38 38;
  --base-1100: 31 31 31;
  --base-1200: 20 20 20;
  --base-1300: 0 0 0;
  --base-content: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem;
}

[data-mode=dark] {
  --primary: 22 104 220;
  --primary-hover: 21 84 173;
  --primary-active: 60 137 232;
  --primary-content: 255 255 255;
  --success: 73 170 25;
  --success-hover: 60 134 24;
  --success-active: 106 190 57;
  --success-content: 255 255 255;
  --warning: 216 150 20;
  --warning-hover: 170 119 20;
  --warning-active: 232 179 57;
  --warning-content: 255 255 255;
  --error: 211 32 41;
  --error-hover: 166 29 36;
  --error-active: 232 71 73;
  --error-content: 255 255 255;
  --neutral: 90 90 90;
  --neutral-hover: 73 73 73;
  --neutral-active: 106 106 106;
  --neutral-content: 255 255 255;
  --base-1300: 255 255 255;
  --base-1200: 250 250 250;
  --base-1100: 245 245 245;
  --base-1000: 240 240 240;
  --base-900: 217 217 217;
  --base-800: 191 191 191;
  --base-700: 140 140 140;
  --base-600: 89 89 89;
  --base-500: 67 67 67;
  --base-400: 38 38 38;
  --base-300: 31 31 31;
  --base-200: 20 20 20;
  --base-100: 0 0 0;
  --base-content: 255 255 255;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem;
}",
  "cssInJs": {
    ":root": {
      "--ice-animation-btn": "0.25s",
      "--ice-animation-input": "0.2s",
      "--ice-base-100": "255 255 255",
      "--ice-base-1000": "38 38 38",
      "--ice-base-1100": "31 31 31",
      "--ice-base-1200": "20 20 20",
      "--ice-base-1300": "0 0 0",
      "--ice-base-200": "250 250 250",
      "--ice-base-300": "245 245 245",
      "--ice-base-400": "240 240 240",
      "--ice-base-500": "217 217 217",
      "--ice-base-600": "191 191 191",
      "--ice-base-700": "140 140 140",
      "--ice-base-800": "89 89 89",
      "--ice-base-900": "67 67 67",
      "--ice-base-content": "0 0 0",
      "--ice-border-btn": "1px",
      "--ice-error": "245 34 45",
      "--ice-error-active": "207 19 34",
      "--ice-error-content": "255 255 255",
      "--ice-error-hover": "255 77 79",
      "--ice-neutral": "102 102 102",
      "--ice-neutral-active": "64 64 64",
      "--ice-neutral-content": "255 255 255",
      "--ice-neutral-hover": "115 115 115",
      "--ice-primary": "22 119 255",
      "--ice-primary-active": "9 88 217",
      "--ice-primary-content": "255 255 255",
      "--ice-primary-hover": "64 150 255",
      "--ice-rounded-badge": "1.9rem",
      "--ice-rounded-box": "1rem",
      "--ice-rounded-btn": "0.5rem",
      "--ice-skeleton-duration": "1.2s",
      "--ice-success": "82 196 26",
      "--ice-success-active": "56 158 13",
      "--ice-success-content": "255 255 255",
      "--ice-success-hover": "115 209 61",
      "--ice-tab-border": "1px",
      "--ice-tab-radius": "0.5rem",
      "--ice-warning": "250 173 20",
      "--ice-warning-active": "212 136 6",
      "--ice-warning-content": "255 255 255",
      "--ice-warning-hover": "255 197 61",
    },
    "[data-mode=dark]": {
      "--ice-animation-btn": "0.25s",
      "--ice-animation-input": "0.2s",
      "--ice-base-100": "0 0 0",
      "--ice-base-1000": "240 240 240",
      "--ice-base-1100": "245 245 245",
      "--ice-base-1200": "250 250 250",
      "--ice-base-1300": "255 255 255",
      "--ice-base-200": "20 20 20",
      "--ice-base-300": "31 31 31",
      "--ice-base-400": "38 38 38",
      "--ice-base-500": "67 67 67",
      "--ice-base-600": "89 89 89",
      "--ice-base-700": "140 140 140",
      "--ice-base-800": "191 191 191",
      "--ice-base-900": "217 217 217",
      "--ice-base-content": "255 255 255",
      "--ice-border-btn": "1px",
      "--ice-error": "211 32 41",
      "--ice-error-active": "232 71 73",
      "--ice-error-content": "255 255 255",
      "--ice-error-hover": "166 29 36",
      "--ice-neutral": "90 90 90",
      "--ice-neutral-active": "106 106 106",
      "--ice-neutral-content": "255 255 255",
      "--ice-neutral-hover": "73 73 73",
      "--ice-primary": "22 104 220",
      "--ice-primary-active": "60 137 232",
      "--ice-primary-content": "255 255 255",
      "--ice-primary-hover": "21 84 173",
      "--ice-rounded-badge": "1.9rem",
      "--ice-rounded-box": "1rem",
      "--ice-rounded-btn": "0.5rem",
      "--ice-skeleton-duration": "1.2s",
      "--ice-success": "73 170 25",
      "--ice-success-active": "106 190 57",
      "--ice-success-content": "255 255 255",
      "--ice-success-hover": "60 134 24",
      "--ice-tab-border": "1px",
      "--ice-tab-radius": "0.5rem",
      "--ice-warning": "216 150 20",
      "--ice-warning-active": "232 179 57",
      "--ice-warning-content": "255 255 255",
      "--ice-warning-hover": "170 119 20",
    },
  },
  "resolvedCss": ":root {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

[data-mode=dark] {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}",
}
`;

exports[`build > build base change default selector case  1`] = `
{
  "css": "page {
  --primary: 22 119 255;
  --primary-hover: 64 150 255;
  --primary-active: 9 88 217;
  --primary-content: 255 255 255;
  --success: 82 196 26;
  --success-hover: 115 209 61;
  --success-active: 56 158 13;
  --success-content: 255 255 255;
  --warning: 250 173 20;
  --warning-hover: 255 197 61;
  --warning-active: 212 136 6;
  --warning-content: 255 255 255;
  --error: 245 34 45;
  --error-hover: 255 77 79;
  --error-active: 207 19 34;
  --error-content: 255 255 255;
  --neutral: 102 102 102;
  --neutral-hover: 115 115 115;
  --neutral-active: 64 64 64;
  --neutral-content: 255 255 255;
  --base-100: 255 255 255;
  --base-200: 250 250 250;
  --base-300: 245 245 245;
  --base-400: 240 240 240;
  --base-500: 217 217 217;
  --base-600: 191 191 191;
  --base-700: 140 140 140;
  --base-800: 89 89 89;
  --base-900: 67 67 67;
  --base-1000: 38 38 38;
  --base-1100: 31 31 31;
  --base-1200: 20 20 20;
  --base-1300: 0 0 0;
  --base-content: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem;
}

.dark {
  --primary: 22 104 220;
  --primary-hover: 21 84 173;
  --primary-active: 60 137 232;
  --primary-content: 255 255 255;
  --success: 73 170 25;
  --success-hover: 60 134 24;
  --success-active: 106 190 57;
  --success-content: 255 255 255;
  --warning: 216 150 20;
  --warning-hover: 170 119 20;
  --warning-active: 232 179 57;
  --warning-content: 255 255 255;
  --error: 211 32 41;
  --error-hover: 166 29 36;
  --error-active: 232 71 73;
  --error-content: 255 255 255;
  --neutral: 90 90 90;
  --neutral-hover: 73 73 73;
  --neutral-active: 106 106 106;
  --neutral-content: 255 255 255;
  --base-1300: 255 255 255;
  --base-1200: 250 250 250;
  --base-1100: 245 245 245;
  --base-1000: 240 240 240;
  --base-900: 217 217 217;
  --base-800: 191 191 191;
  --base-700: 140 140 140;
  --base-600: 89 89 89;
  --base-500: 67 67 67;
  --base-400: 38 38 38;
  --base-300: 31 31 31;
  --base-200: 20 20 20;
  --base-100: 0 0 0;
  --base-content: 255 255 255;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem;
}",
  "cssInJs": {
    ".dark": {
      "--ice-animation-btn": "0.25s",
      "--ice-animation-input": "0.2s",
      "--ice-base-100": "0 0 0",
      "--ice-base-1000": "240 240 240",
      "--ice-base-1100": "245 245 245",
      "--ice-base-1200": "250 250 250",
      "--ice-base-1300": "255 255 255",
      "--ice-base-200": "20 20 20",
      "--ice-base-300": "31 31 31",
      "--ice-base-400": "38 38 38",
      "--ice-base-500": "67 67 67",
      "--ice-base-600": "89 89 89",
      "--ice-base-700": "140 140 140",
      "--ice-base-800": "191 191 191",
      "--ice-base-900": "217 217 217",
      "--ice-base-content": "255 255 255",
      "--ice-border-btn": "1px",
      "--ice-error": "211 32 41",
      "--ice-error-active": "232 71 73",
      "--ice-error-content": "255 255 255",
      "--ice-error-hover": "166 29 36",
      "--ice-neutral": "90 90 90",
      "--ice-neutral-active": "106 106 106",
      "--ice-neutral-content": "255 255 255",
      "--ice-neutral-hover": "73 73 73",
      "--ice-primary": "22 104 220",
      "--ice-primary-active": "60 137 232",
      "--ice-primary-content": "255 255 255",
      "--ice-primary-hover": "21 84 173",
      "--ice-rounded-badge": "1.9rem",
      "--ice-rounded-box": "1rem",
      "--ice-rounded-btn": "0.5rem",
      "--ice-skeleton-duration": "1.2s",
      "--ice-success": "73 170 25",
      "--ice-success-active": "106 190 57",
      "--ice-success-content": "255 255 255",
      "--ice-success-hover": "60 134 24",
      "--ice-tab-border": "1px",
      "--ice-tab-radius": "0.5rem",
      "--ice-warning": "216 150 20",
      "--ice-warning-active": "232 179 57",
      "--ice-warning-content": "255 255 255",
      "--ice-warning-hover": "170 119 20",
    },
    "page": {
      "--ice-animation-btn": "0.25s",
      "--ice-animation-input": "0.2s",
      "--ice-base-100": "255 255 255",
      "--ice-base-1000": "38 38 38",
      "--ice-base-1100": "31 31 31",
      "--ice-base-1200": "20 20 20",
      "--ice-base-1300": "0 0 0",
      "--ice-base-200": "250 250 250",
      "--ice-base-300": "245 245 245",
      "--ice-base-400": "240 240 240",
      "--ice-base-500": "217 217 217",
      "--ice-base-600": "191 191 191",
      "--ice-base-700": "140 140 140",
      "--ice-base-800": "89 89 89",
      "--ice-base-900": "67 67 67",
      "--ice-base-content": "0 0 0",
      "--ice-border-btn": "1px",
      "--ice-error": "245 34 45",
      "--ice-error-active": "207 19 34",
      "--ice-error-content": "255 255 255",
      "--ice-error-hover": "255 77 79",
      "--ice-neutral": "102 102 102",
      "--ice-neutral-active": "64 64 64",
      "--ice-neutral-content": "255 255 255",
      "--ice-neutral-hover": "115 115 115",
      "--ice-primary": "22 119 255",
      "--ice-primary-active": "9 88 217",
      "--ice-primary-content": "255 255 255",
      "--ice-primary-hover": "64 150 255",
      "--ice-rounded-badge": "1.9rem",
      "--ice-rounded-box": "1rem",
      "--ice-rounded-btn": "0.5rem",
      "--ice-skeleton-duration": "1.2s",
      "--ice-success": "82 196 26",
      "--ice-success-active": "56 158 13",
      "--ice-success-content": "255 255 255",
      "--ice-success-hover": "115 209 61",
      "--ice-tab-border": "1px",
      "--ice-tab-radius": "0.5rem",
      "--ice-warning": "250 173 20",
      "--ice-warning-active": "212 136 6",
      "--ice-warning-content": "255 255 255",
      "--ice-warning-hover": "255 197 61",
    },
  },
  "resolvedCss": "page {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}",
}
`;

exports[`build > build base with custom types 1`] = `
{
  "css": ":root {
  --primary: 19 194 194;
  --primary-hover: 54 207 201;
  --primary-active: 8 151 156;
  --primary-content: 255 255 255;
  --success: 82 196 26;
  --success-hover: 115 209 61;
  --success-active: 56 158 13;
  --success-content: 255 255 255;
  --warning: 250 173 20;
  --warning-hover: 255 197 61;
  --warning-active: 212 136 6;
  --warning-content: 255 255 255;
  --error: 245 34 45;
  --error-hover: 255 77 79;
  --error-active: 207 19 34;
  --error-content: 255 255 255;
  --neutral: 102 102 102;
  --neutral-hover: 115 115 115;
  --neutral-active: 64 64 64;
  --neutral-content: 255 255 255;
  --base-100: 255 255 255;
  --base-200: 250 250 250;
  --base-300: 245 245 245;
  --base-400: 240 240 240;
  --base-500: 217 217 217;
  --base-600: 191 191 191;
  --base-700: 140 140 140;
  --base-800: 89 89 89;
  --base-900: 67 67 67;
  --base-1000: 38 38 38;
  --base-1100: 31 31 31;
  --base-1200: 20 20 20;
  --base-1300: 0 0 0;
  --base-content: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem;
}

[data-mode=dark] {
  --primary: 19 146 146;
  --primary-hover: 19 116 116;
  --primary-active: 46 165 161;
  --primary-content: 255 255 255;
  --success: 73 170 25;
  --success-hover: 60 134 24;
  --success-active: 106 190 57;
  --success-content: 255 255 255;
  --warning: 216 150 20;
  --warning-hover: 170 119 20;
  --warning-active: 232 179 57;
  --warning-content: 255 255 255;
  --error: 211 32 41;
  --error-hover: 166 29 36;
  --error-active: 232 71 73;
  --error-content: 255 255 255;
  --neutral: 90 90 90;
  --neutral-hover: 73 73 73;
  --neutral-active: 106 106 106;
  --neutral-content: 255 255 255;
  --base-1300: 255 255 255;
  --base-1200: 250 250 250;
  --base-1100: 245 245 245;
  --base-1000: 240 240 240;
  --base-900: 217 217 217;
  --base-800: 191 191 191;
  --base-700: 140 140 140;
  --base-600: 89 89 89;
  --base-500: 67 67 67;
  --base-400: 38 38 38;
  --base-300: 31 31 31;
  --base-200: 20 20 20;
  --base-100: 0 0 0;
  --base-content: 255 255 255;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem;
}",
  "cssInJs": {
    ":root": {
      "--ice-animation-btn": "0.25s",
      "--ice-animation-input": "0.2s",
      "--ice-base-100": "255 255 255",
      "--ice-base-1000": "38 38 38",
      "--ice-base-1100": "31 31 31",
      "--ice-base-1200": "20 20 20",
      "--ice-base-1300": "0 0 0",
      "--ice-base-200": "250 250 250",
      "--ice-base-300": "245 245 245",
      "--ice-base-400": "240 240 240",
      "--ice-base-500": "217 217 217",
      "--ice-base-600": "191 191 191",
      "--ice-base-700": "140 140 140",
      "--ice-base-800": "89 89 89",
      "--ice-base-900": "67 67 67",
      "--ice-base-content": "0 0 0",
      "--ice-border-btn": "1px",
      "--ice-error": "245 34 45",
      "--ice-error-active": "207 19 34",
      "--ice-error-content": "255 255 255",
      "--ice-error-hover": "255 77 79",
      "--ice-neutral": "102 102 102",
      "--ice-neutral-active": "64 64 64",
      "--ice-neutral-content": "255 255 255",
      "--ice-neutral-hover": "115 115 115",
      "--ice-primary": "19 194 194",
      "--ice-primary-active": "8 151 156",
      "--ice-primary-content": "255 255 255",
      "--ice-primary-hover": "54 207 201",
      "--ice-rounded-badge": "1.9rem",
      "--ice-rounded-box": "1rem",
      "--ice-rounded-btn": "0.5rem",
      "--ice-skeleton-duration": "1.2s",
      "--ice-success": "82 196 26",
      "--ice-success-active": "56 158 13",
      "--ice-success-content": "255 255 255",
      "--ice-success-hover": "115 209 61",
      "--ice-tab-border": "1px",
      "--ice-tab-radius": "0.5rem",
      "--ice-warning": "250 173 20",
      "--ice-warning-active": "212 136 6",
      "--ice-warning-content": "255 255 255",
      "--ice-warning-hover": "255 197 61",
    },
    "[data-mode=dark]": {
      "--ice-animation-btn": "0.25s",
      "--ice-animation-input": "0.2s",
      "--ice-base-100": "0 0 0",
      "--ice-base-1000": "240 240 240",
      "--ice-base-1100": "245 245 245",
      "--ice-base-1200": "250 250 250",
      "--ice-base-1300": "255 255 255",
      "--ice-base-200": "20 20 20",
      "--ice-base-300": "31 31 31",
      "--ice-base-400": "38 38 38",
      "--ice-base-500": "67 67 67",
      "--ice-base-600": "89 89 89",
      "--ice-base-700": "140 140 140",
      "--ice-base-800": "191 191 191",
      "--ice-base-900": "217 217 217",
      "--ice-base-content": "255 255 255",
      "--ice-border-btn": "1px",
      "--ice-error": "211 32 41",
      "--ice-error-active": "232 71 73",
      "--ice-error-content": "255 255 255",
      "--ice-error-hover": "166 29 36",
      "--ice-neutral": "90 90 90",
      "--ice-neutral-active": "106 106 106",
      "--ice-neutral-content": "255 255 255",
      "--ice-neutral-hover": "73 73 73",
      "--ice-primary": "19 146 146",
      "--ice-primary-active": "46 165 161",
      "--ice-primary-content": "255 255 255",
      "--ice-primary-hover": "19 116 116",
      "--ice-rounded-badge": "1.9rem",
      "--ice-rounded-box": "1rem",
      "--ice-rounded-btn": "0.5rem",
      "--ice-skeleton-duration": "1.2s",
      "--ice-success": "73 170 25",
      "--ice-success-active": "106 190 57",
      "--ice-success-content": "255 255 255",
      "--ice-success-hover": "60 134 24",
      "--ice-tab-border": "1px",
      "--ice-tab-radius": "0.5rem",
      "--ice-warning": "216 150 20",
      "--ice-warning-active": "232 179 57",
      "--ice-warning-content": "255 255 255",
      "--ice-warning-hover": "170 119 20",
    },
  },
  "resolvedCss": ":root {
  --ice-primary: 19 194 194;
  --ice-primary-hover: 54 207 201;
  --ice-primary-active: 8 151 156;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 250 250 250;
  --ice-base-300: 245 245 245;
  --ice-base-400: 240 240 240;
  --ice-base-500: 217 217 217;
  --ice-base-600: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-800: 89 89 89;
  --ice-base-900: 67 67 67;
  --ice-base-1000: 38 38 38;
  --ice-base-1100: 31 31 31;
  --ice-base-1200: 20 20 20;
  --ice-base-1300: 0 0 0;
  --ice-base-content: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}

[data-mode=dark] {
  --ice-primary: 19 146 146;
  --ice-primary-hover: 19 116 116;
  --ice-primary-active: 46 165 161;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-base-1300: 255 255 255;
  --ice-base-1200: 250 250 250;
  --ice-base-1100: 245 245 245;
  --ice-base-1000: 240 240 240;
  --ice-base-900: 217 217 217;
  --ice-base-800: 191 191 191;
  --ice-base-700: 140 140 140;
  --ice-base-600: 89 89 89;
  --ice-base-500: 67 67 67;
  --ice-base-400: 38 38 38;
  --ice-base-300: 31 31 31;
  --ice-base-200: 20 20 20;
  --ice-base-100: 0 0 0;
  --ice-base-content: 255 255 255;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem;
}",
}
`;
